--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -92,6 +92,20 @@
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
 
+            <Button
+                android:id="@+id/fashion_style"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginHorizontal="32dp"
+                android:layout_marginBottom="5dp"
+                android:backgroundTint="@color/black"
+                android:elevation="6dp"
+                android:fontFamily="@font/inter_medium"
+                android:text="@string/fashion_style"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
+
         </LinearLayout>
 
     </ScrollView>
