--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -38,63 +38,76 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView
-        android:id="@+id/previewImage"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="420dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_input"
-        android:contentDescription="@string/logo_placeholder"
-        android:src="@drawable/ic_signin_screen"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-         />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/noticeText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/Note"
-        android:fontFamily="@font/inter_regular"
-        android:textSize="14sp"
-        android:textColor="@color/light_txt_color"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/previewImage" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/previewImage"
+                android:layout_width="match_parent"
+                android:layout_height="420dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/bg_input"
+                android:contentDescription="@string/logo_placeholder"
+                android:src="@drawable/ic_signin_screen"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar2"
+                />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/noticeText"
-        android:layout_margin="20dp"
-        android:gravity="end"
-        >
+            <TextView
+                android:id="@+id/noticeText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/Note"
+                android:fontFamily="@font/inter_regular"
+                android:textSize="14sp"
+                android:textColor="@color/light_txt_color"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/previewImage" />
 
-        <ImageButton
-            android:id="@+id/favouriteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_input"
-            android:contentDescription="@string/logo_placeholder"
-            android:padding="8dp"
-            android:src="@drawable/ic_outline_heart"
-            android:layout_marginEnd="20dp"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@+id/noticeText"
+                android:layout_margin="20dp"
+                android:gravity="end"
+                >
 
-        <ImageButton
-            android:id="@+id/downloadBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_input"
-            android:contentDescription="@string/logo_placeholder"
-            android:padding="8dp"
-            android:src="@drawable/ic_download"
-            />
+                <ImageButton
+                    android:id="@+id/favouriteButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_input"
+                    android:contentDescription="@string/logo_placeholder"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_outline_heart"
+                    android:layout_marginEnd="20dp"
+                    />
 
-    </LinearLayout>
+                <ImageButton
+                    android:id="@+id/downloadBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_input"
+                    android:contentDescription="@string/logo_placeholder"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_download"
+                    />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
 
 
