Hamza: enhance ui

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,6 +82,9 @@
                     android:background="@drawable/bg_input"
                     android:ems="10"
                     android:fontFamily="@font/inter_regular"
+                    android:backgroundTint="@color/border_color"
+                    android:drawableStart="@drawable/ic_user"
+                    android:drawablePadding="10dp"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     android:paddingStart="12dp"
@@ -116,6 +119,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="54dp"
                     android:autofillHints="Password"
+                    android:backgroundTint="@color/border_color"
+                    android:drawableStart="@drawable/ic_user"
+                    android:drawablePadding="10dp"
                     android:background="@drawable/bg_input"
                     android:ems="10"
                     android:fontFamily="@font/inter_regular"
