--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -120,7 +120,7 @@
                     android:layout_height="54dp"
                     android:autofillHints="Password"
                     android:backgroundTint="@color/border_color"
-                    android:drawableStart="@drawable/ic_user"
+                    android:drawableStart="@drawable/ic_password"
                     android:drawablePadding="10dp"
                     android:background="@drawable/bg_input"
                     android:ems="10"
@@ -151,7 +151,7 @@
                 android:layout_height="wrap_content"
                 />
 
-            <Button
+            <android.widget.Button
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
@@ -160,12 +160,13 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20sp"
                 android:layout_marginBottom="5dp"
-                android:backgroundTint="@color/black"
+                android:backgroundTint="@color/border_color"
                 android:elevation="6dp"
                 android:fontFamily="@font/inter_medium"
                 android:text="@string/sign_in"
                 android:textAllCaps="false"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
+                android:background="@drawable/bg_input"
                 android:textSize="16sp" />
 
 
