--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -49,7 +49,6 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <!-- Enhanced Profile Image Component with Material Design 3 styling -->
             <FrameLayout
                 android:id="@+id/profileImageContainer"
                 android:layout_width="wrap_content"
@@ -57,13 +56,11 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="48dp">
 
-                <!-- Profile Picture -->
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/userAvatar"
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:layout_gravity="center"
-
                     android:contentDescription="@string/logo_placeholder"
                     android:src="@drawable/ic_account_screen"
                     android:scaleType="centerCrop"
@@ -74,7 +71,6 @@
                     app:civ_border_width="3dp"
                     app:civ_circle_background_color="@color/white" />
 
-                <!-- Edit Icon (ImageButton with circular ripple) -->
                 <ImageButton
                     android:id="@+id/changeProfileBtn"
                     android:layout_width="36dp"
@@ -154,7 +150,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:backgroundTint="@color/border_color"
-                    android:drawableStart="@drawable/ic_user"
+                    android:drawableStart="@drawable/ic_email"
                     android:drawablePadding="10dp"
                     android:ems="10"
                     android:fontFamily="@font/inter_regular"
@@ -194,7 +190,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:backgroundTint="@color/border_color"
-                    android:drawableStart="@drawable/ic_user"
+                    android:drawableStart="@drawable/ic_password"
                     android:drawablePadding="10dp"
                     android:background="@drawable/bg_input"
                     android:hint="@string/password"
@@ -206,7 +202,7 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
+            <android.widget.Button
                 android:id="@+id/signupBtn"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
@@ -216,8 +212,9 @@
                 android:elevation="6dp"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginBottom="5dp"
-                android:backgroundTint="@color/black"
-                android:textColor="@android:color/white"
+                android:backgroundTint="@color/border_color"
+                android:textColor="@android:color/black"
+                android:background="@drawable/bg_input"
                 android:layout_marginStart="20sp"
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="20dp"
