--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -160,12 +160,12 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20sp"
                 android:layout_marginBottom="5dp"
-                android:backgroundTint="@color/border_color"
+                android:backgroundTint="@color/black"
                 android:elevation="6dp"
                 android:fontFamily="@font/inter_medium"
                 android:text="@string/sign_in"
                 android:textAllCaps="false"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:background="@drawable/bg_input"
                 android:textSize="16sp" />
 
