Hamza: adding chip bottom navigation menu

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
 
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <item
     android:id="@+id/item_home"
     android:icon="@drawable/ic_home"
-
+    app:cnb_iconColor="@color/blue"
     android:title="@string/home" />
 
 <item
     android:id="@+id/item_profile"
     android:icon="@drawable/ic_user"
+    app:cnb_iconColor="@color/blue"
     android:title="@string/profile" />
 
 </menu>
