--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:layout_marginBottom="0dp"
-        android:background="@color/white"
+        android:background="@color/light_bg_color"
         app:cnb_menuResource="@menu/bottom_navigation_menu" />
 
 </RelativeLayout>
