--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,6 +27,8 @@
 
 
     <ScrollView
+        android:paddingTop="40dp"
+        android:paddingBottom="40dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -34,6 +36,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
             android:orientation="vertical">
 
             <ImageView
